# ai-gateway

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  claude-progress.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
app/: config.py  deps.py  errors.py  logging_conf.py  main.py  media_fetch.py  redis_client.py
app/api/: router.py
app/api/v1/: capacity.py  generate.py  health.py  jobs.py  keys.py  pool.py  stats.py  usage.py
app/jobs/: store.py  worker.py
app/models/: enums.py  jobs.py  requests.py  responses.py
app/pool/: backoff.py  key_pool.py  redis_keys.py
app/pool/lua/: acquire_inflight.lua  reserve_rpm.lua
app/providers/: base.py  registry.py
app/providers/gemini/: errors.py  provider.py
app/rate_limit/: limiter.py
app/tracking/: call_tracker.py  stats.py  usage_logger.py
config/: models.yaml
scripts/: prune_logs.py  quota_dashboard.py
tests/: conftest.py  test_api_429.py  test_api_generate.py  test_api_generate_media.py  test_api_generate_media_url.py  test_api_jobs.py  test_api_pool_status.py  test_backoff.py  test_call_tracker.py  test_dead_cooldown_hard_cap.py  test_gemini_provider.py  test_job_store.py  test_job_worker.py  test_key_pool.py  test_media_fetch.py
