[project]
name = "ai-gateway"
version = "0.1.0"
description = "Standalone multi-key, multi-provider LLM gateway microservice (pluggable providers; Gemini is the first)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=1.3.0",
    "redis>=5.1",
    "PyYAML>=6.0",
    "python-multipart>=0.0.12",
    "rich>=13.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.26",
    "lupa>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
